--- a/documentation/aboutit.tex
+++ b/documentation/aboutit.tex
@@ -5,8 +5,8 @@
 \usepackage{geometry}
 \geometry{a4paper, margin=1in}
 
-\title{Function Documentation in LaTeX}
-\author{Your Name}
+\title{Function Documentation}
+\author{Samarth Manoj Naik}
 \date{\today}
 
 \begin{document}
